--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "material-symbols": "^0.10.0",
     "pinia": "^2.1.4",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
