--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "material-symbols": "^0.10.0",
+    "moment": "^2.29.4",
     "pinia": "^2.1.4",
     "pinia-plugin-persistedstate": "^3.1.0",
     "postcss": "^8.4.26",
