--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.14",
     "@material/web": "^1.0.0-pre.13",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "material-symbols": "^0.10.0",
+    "moment": "^2.29.4",
     "pinia": "^2.1.4",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
