--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@electron-toolkit/preload": "^2.0.0",
+    "@electron-toolkit/utils": "^1.0.2",
+    "@electron/notarize": "^2.1.0",
     "@headlessui/vue": "^1.7.14",
     "@material/web": "^1.0.0-pre.13",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
@@ -27,6 +30,9 @@
   "devDependencies": {
     "@types/node": "^20.4.2",
     "@vitejs/plugin-vue": "^4.2.3",
+    "electron": "^25.3.1",
+    "electron-builder": "^24.4.0",
+    "electron-vite": "^1.0.25",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
     "vue-tsc": "^1.8.3"
