--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-  "name": "my-steam-profile",
+  "name": "steamer",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "main": "./out/main/index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "type-check": "vue-tsc --noEmit"
+    "dev:web": "vite",
+    "build:web": "vue-tsc && vite build",
+    "preview:web": "vite preview",
+    "type-check": "vue-tsc --noEmit",
+    "dev:electron": "electron-vite dev",
+    "preview:electron": "electron-vite preview",
+    "format": "prettier --write .",
+    "postinstall": "electron-builder install-app-deps",
+    "build:win": "npm run build && electron-builder --win --config",
+    "build:mac": "npm run build && electron-builder --mac --config",
+    "build:linux": "npm run build && electron-builder --linux --config",
+    "build-only": "vite build",
+    "build": "electron-vite build"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
