--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,10 @@
 {
+  "../../node_modules/material-symbols/material-symbols-outlined.woff2": {
+    "file": "assets/material-symbols-outlined-b9907482.woff2",
+    "src": "../../node_modules/material-symbols/material-symbols-outlined.woff2"
+  },
   "index.css": {
-    "file": "assets/index-0bdde964.css",
+    "file": "assets/index-8aa2559a.css",
     "src": "index.css"
   },
   "index.html": {
@@ -8,14 +12,10 @@
       "assets/material-symbols-outlined-b9907482.woff2"
     ],
     "css": [
-      "assets/index-0bdde964.css"
+      "assets/index-8aa2559a.css"
     ],
-    "file": "assets/index-3c11d71c.js",
+    "file": "assets/index-63e6576a.js",
     "isEntry": true,
     "src": "index.html"
-  },
-  "node_modules/material-symbols/material-symbols-outlined.woff2": {
-    "file": "assets/material-symbols-outlined-b9907482.woff2",
-    "src": "node_modules/material-symbols/material-symbols-outlined.woff2"
   }
 }
