--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "my-steam-profile",
+  "name": "steamer",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.0.1",
+  "main": "./out/main/index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "type-check": "vue-tsc --noEmit"
+    "dev:web": "vite",
+    "build:web": "vue-tsc && vite build",
+    "preview:web": "vite preview",
+    "type-check": "vue-tsc --noEmit",
+    "dev:electron": "electron-vite dev",
+    "preview:electron": "electron-vite preview",
+    "format": "prettier --write .",
+    "postinstall": "electron-builder install-app-deps",
+    "build:win": "npm run build && electron-builder --win --config",
+    "build:mac": "npm run build && electron-builder --mac --config",
+    "build:linux": "npm run build && electron-builder --linux --config",
+    "build-only": "vite build",
+    "build": "electron-vite build"
   },
   "dependencies": {
+    "@electron-toolkit/preload": "^2.0.0",
+    "@electron-toolkit/utils": "^1.0.2",
+    "@electron/notarize": "^2.1.0",
     "@headlessui/vue": "^1.7.14",
     "@material/web": "^1.0.0-pre.13",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
@@ -27,6 +39,9 @@
   "devDependencies": {
     "@types/node": "^20.4.2",
     "@vitejs/plugin-vue": "^4.2.3",
+    "electron": "^25.3.1",
+    "electron-builder": "^24.4.0",
+    "electron-vite": "^1.0.25",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
     "vue-tsc": "^1.8.3"
